fixed some overlap issues

--- a/gruppeeksamen MIX114/style.css
+++ b/gruppeeksamen MIX114/style.css
@@ -90,7 +90,7 @@ header{
 }
 
 footer{
-    height:150px;
+    height:170px;
     background-color: rgba(0,0,0,0.5);
 }
 
